# nostr.blue

./: .coderabbit.yml  .env.example  .gitignore  AGENTS.md  CONVERSION_STATUS.md  Cargo.toml  Dioxus.toml  README.md  RUN.sh  components.json  eslint.config.js  index.html  package-lock.json  package.json  stack.json  svelte.config.js  tailwind.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
assets/: tailwind.css
eslint-rules/: require-webmanifest.js
public/: manifest.webmanifest  voice-recorder.js
src/: App.tsx  AppRouter.tsx  app.html  index.css  main.rs
src/components/: AppProvider.tsx  AppSidebar.tsx  BookmarkItem.tsx  ConversationList.tsx  ConversationThread.tsx  CreateListDialog.tsx  EditProfileForm.tsx  EmojiPicker.tsx  ErrorBoundary.tsx  ExploreSidebar.tsx  FollowButton.tsx  ListCard.tsx  MainLayout.tsx  NIP19Router.tsx  NostrProvider.tsx  NoteContent.tsx  NotificationItem.tsx  PostCard.tsx  PostComposer.tsx  ReactionButton.tsx  RelaySelector.tsx  RepostButton.tsx  RightSidebar.tsx  ScrollToTop.tsx  ThemeProvider.tsx  WalletModal.tsx  ZapButton.tsx  ZapDialog.tsx  add_to_list_modal.rs  album_card.rs  article_card.rs  article_content.rs  artist_card.rs  cashu_add_mint_modal.rs  cashu_create_request_modal.rs  cashu_mint_discovery_modal.rs  cashu_optimize_modal.rs  cashu_pay_request_modal.rs  cashu_receive_lightning_modal.rs  cashu_receive_modal.rs  (+67 more)
src/components/auth/: LoginDialog.tsx
src/components/comments/: Comment.tsx  CommentForm.tsx  CommentsSection.tsx
src/components/ui/: form-utils.ts  sidebar-utils.ts
src/context/: app_context.rs  mod.rs
src/contexts/: AppContext.ts  NWCContext.tsx
src/hooks/: mod.rs  useAuthor.ts  useBookmarks.ts  useComments.ts  useCommunities.ts  useCurrentUser.ts  useDVMJob.ts  useDVMs.ts  useDirectMessages.ts  useFeed.ts  useFollowSets.ts  useFollowing.ts  useIsMobile.tsx  useLists.ts  useLoggedInAccounts.ts  useLoginActions.ts  useMuteList.ts  useNWC.ts  useNWCContext.ts  useNostrPublish.ts  useNostrWineSearch.ts  useNotifications.ts  usePinnedNotes.ts  useProfileStats.ts  useReactions.ts  useReplyCount.ts  useReposts.ts  useSearchUsers.ts  useSendMessage.ts  useSettings.ts  useShakespeare.ts  useSuggestedProfiles.ts  useToast.ts  useTrendingNotes.ts  useUploadFile.ts  useWallet.ts  useZaps.ts  use_auth.rs  use_feed.rs  use_infinite_scroll.rs  (+3 more)
src/lib/: nip44.ts  nostrEncoding.ts  transitions.ts  utils.ts
src/lib/components/: AppSidebar.svelte  BookmarkButton.svelte  BookmarkItem.svelte  ConversationList.svelte  ConversationThread.svelte  EditProfileForm.svelte  FollowButton.svelte  MainLayout.svelte  NostrMention.svelte  Note.svelte  NoteComposer.svelte  NoteContent.svelte  NotificationItem.svelte  ProfileEditor.svelte  ReactionButton.svelte  RelaySelector.svelte  ReplyComposer.svelte  RepostButton.svelte  RightSidebar.svelte  TrendingRightSidebar.svelte  WalletModal.svelte  ZapButton.svelte  ZapDialog.svelte
src/lib/hooks/: useBookmarks.svelte.ts  useCommunities.svelte.ts  useCurrentUserProfile.svelte.ts  useDVMFeed.svelte.ts  useDVMJob.svelte.ts  useDVMs.svelte.ts  useFollowing.svelte.ts  useLists.svelte.ts  useProfileStats.svelte.ts  useReactions.svelte.ts  useReplyCount.svelte.ts  useReposts.svelte.ts  useTrendingAuthors.svelte.ts  useTrendingNotes.svelte.ts  useUserBookmarks.svelte.ts
src/lib/services/: dvm.ts  outbox.ts  trending.ts
src/lib/stores/: accounts.svelte.ts  appContext.svelte.ts  appStore.ts  auth.ts  author.svelte.ts  comments.svelte.ts  currentUser.svelte.ts  dvm.svelte.ts  following.svelte.ts  index.ts  localStorage.svelte.ts  messages.svelte.ts  notifications.svelte.ts  nwc.svelte.ts  postComment.svelte.ts  publish.svelte.ts  shakespeare.svelte.ts  theme.svelte.ts  toast.svelte.ts  upload.svelte.ts  wallet.svelte.ts  welshman.ts  welshmanPersistence.ts  zaps.svelte.ts
src/lib/types/: nostr.ts
src/lib/utils/: formatTime.ts  mobile.svelte.ts
src/pages/: BookmarksPage.tsx  CommunitiesPage.tsx  CommunityFeedPage.tsx  DVMFeedPage.tsx  DVMPage.tsx  ExplorePage.tsx  FeedPage.tsx  HashtagFeedPage.tsx  Index.tsx  ListsPage.tsx  ManageListPage.tsx  MessagesPage.tsx  NotificationsPage.tsx  ProfilePage.tsx  SearchPage.tsx  SettingsPage.tsx  ThreadPage.tsx  TrendingPage.tsx  UserListFeedPage.tsx
src/routes/: +error.svelte  +layout.svelte  +page.svelte  about.rs  article_detail.rs  article_new.rs  articles.rs  bookmarks.rs  cashu_wallet.rs  communities.rs  community.rs  cookies.rs  dms.rs  dvm.rs  explore.rs  hashtag.rs  home.rs  lists.rs  live_stream_detail.rs  live_stream_new.rs  mod.rs  nip19.rs  note.rs  note_new.rs  notifications.rs  photo_detail.rs  photo_new.rs  photos.rs  poll_new.rs  poll_view.rs  polls.rs  privacy.rs  profile.rs  search.rs  settings.rs  settings_blocklist.rs  settings_muted.rs  terms.rs  trending.rs  video_detail.rs  (+9 more)
src/routes/[nip19]/: +page.svelte
src/routes/about/: +page.svelte
src/routes/bookmarks/: +page.svelte
src/routes/communities/: +page.svelte
src/routes/cookies/: +page.svelte
src/services/: admission_policy.rs  aggregation.rs  content_search.rs  lnurl.rs  mod.rs  profile_search.rs  profile_stats.rs  quick_zap.rs  trending.rs  wavlake.rs
src/stores/: auth_store.rs  blossom_store.rs  bookmarks.rs  cashu_cdk_bridge.rs  cashu_memory_db.rs  cashu_wallet.rs  cashu_ws.rs  dms.rs  dvm_store.rs  emoji_store.rs  gif_store.rs  indexeddb_database.rs  mod.rs  music_player.rs  nip96_store.rs  nostr_client.rs  nostr_music.rs  notifications.rs  nwc_store.rs  pending_comments.rs  profiles.rs  reactions_store.rs  relay_metadata.rs  settings_store.rs  signer.rs  theme_store.rs  voice_messages_store.rs  webbookmarks.rs
src/test/: TestApp.tsx
src/utils/: article_meta.rs  clipboard.rs  content_parser.rs  data_state.rs  event.rs  format.rs  list_kinds.rs  markdown.rs  mention_extractor.rs  mod.rs  nip19.rs  notification_nip78.rs  profile_prefetch.rs  repost.rs  thread_tree.rs  time.rs  timed_serializer.rs  url_metadata.rs  validation.rs  zap_extraction.rs
static/: manifest.webmanifest
(+295 files in other folders)
